<resources>
    <string name="app_name">FantasyBaseball</string>
    <string name="position">Position</string>
    <string name="stat">Stat</string>
    <string name="submit">Submit</string>
    <string name="name">Player Name</string>
    <string name="pos">POS</string>
    <string name="games">G</string>
    <string name="avg">AVG</string>
    <string name="obp">OBP</string>
    <string name="slg">SLG</string>
    <string name="hr">HR</string>
    <string name="sb">SB</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="simulate">Simulate</string>
    <string name="sim">Sim Stats</string>
    <string name="remove">Remove</string>
    <string name="yourteam">Your Team</string>
    <string-array name="player_names">
        <item>Joe Random</item>
        <item>John Doe</item>
        <item>Player Name</item>
    </string-array>
    <string-array name="hit_values">
        <item>100</item>
        <item>50</item>
        <item>0</item>
    </string-array>
    <string-array name="homerun_values">
        <item>20</item>
        <item>50</item>
        <item>0</item>
    </string-array>
</resources>