<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/position_text"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/position"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/stat_text"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/position_text"
        android:text="@string/stat"
        android:textSize="30sp" />


    <Spinner
        android:id="@+id/positionSpinner"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_below="@id/position_text"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/statSpinner"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_below="@id/stat_text"
        android:layout_toEndOf="@id/position_text"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/button1"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/stat_text"
        android:layout_marginEnd="-112dp"
        android:onClick="verify"
        android:text="@string/submit"
        android:textStyle="bold" />

</RelativeLayout>
