<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/yourteam"
        android:textSize="36sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer1"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer2"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer3"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer4"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer5"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer6"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer7"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer8"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer9"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamPlayer10"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="5dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simButton"
        android:text="@string/sim"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/playerEditText" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/removeButton"
        android:text="@string/remove"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"/>

</LinearLayout>